# gpui-ce

./: .gitignore  Cargo.toml  README.md  audit.toml  clippy.toml  deny.toml  flake.nix  justfile  rheo.toml  typos.toml
.cargo/: config.toml
.claude/: settings.local.json
.github/: CODEOWNERS
.github/workflows/: audit.yml  ci.yml  release.yml
crates/gpui/: Cargo.toml  README.md
crates/gpui/examples/: prelude.rs
crates/gpui/examples/bench/: data_table.rs  paths_bench.rs  pattern.rs  shadow.rs
crates/gpui/examples/ios_app/: README.md  gpui_ios.h
crates/gpui/examples/learn/: animation.rs  async_tasks.rs  creating_components.rs  custom_drawing.rs  haptic_feedback.rs  interactive_elements.rs  layout.rs  styling.rs  text.rs
crates/gpui/examples/legacy/: focus_visible.rs  gif_viewer.rs  gradient.rs  hello_world.rs  image_loading.rs  input.rs  layer_shell.rs  on_window_close_quit.rs  opacity.rs  scrollable.rs  tab_stop.rs  tree.rs  uniform_list.rs  window.rs  window_positioning.rs  window_shadow.rs
crates/gpui/src/: app.rs  dev_tools.rs  element.rs  gpui.rs  platform.rs  scene.rs  style.rs  styled.rs  text_system.rs  transition.rs  view.rs  window.rs
crates/gpui/src/app/: context.rs
crates/gpui/src/elements/: div.rs  surface.rs  text.rs
crates/gpui/src/platform/: ios.rs
crates/gpui/src/text_system/: line_wrapper.rs
crates/gpui_ce_util/: Cargo.toml
crates/gpui_collections/: Cargo.toml
crates/gpui_derive_refineable/: Cargo.toml
crates/gpui_elements/: Cargo.toml
crates/gpui_elements/src/: editable_text.rs  input.rs  lib.rs
crates/gpui_elements/src/editable_text/: actions.rs  caret.rs  element.rs  history.rs  input_element.rs  input_state.rs  layout.rs  notify.rs  shared_element.rs  shared_state.rs  state.rs  storage.rs  text_area_element.rs  text_area_state.rs
crates/gpui_elements/src/input/: colors.rs  cursor.rs  element.rs  history.rs  layout.rs  paint.rs  state.rs  state_input_handler.rs
crates/gpui_linux/: Cargo.toml
crates/gpui_linux/src/linux/: dispatcher.rs  platform.rs
crates/gpui_macos/: Cargo.toml
crates/gpui_macos/src/: dispatcher.rs  gpui_macos.rs  haptic_feedback.rs  platform.rs  window.rs
crates/gpui_macros/: Cargo.toml
crates/gpui_macros/src/: gpui_macros.rs
crates/gpui_media/: Cargo.toml
crates/gpui_platform/: Cargo.toml
crates/gpui_refineable/: Cargo.toml
crates/gpui_scheduler/: Cargo.toml
crates/gpui_scheduler/src/: executor.rs  scheduler.rs  test_scheduler.rs  tests.rs
crates/gpui_sum_tree/: Cargo.toml
crates/gpui_sum_tree/src/: sum_tree.rs
crates/gpui_web/: Cargo.toml
crates/gpui_web/src/: dispatcher.rs
crates/gpui_wgpu/: Cargo.toml
crates/gpui_wgpu/src/: shaders.wgsl  wgpu_context.rs  wgpu_renderer.rs
crates/gpui_windows/: Cargo.toml
crates/gpui_windows/src/: directx_renderer.rs  dispatcher.rs  events.rs  platform.rs  window.rs
crates/gpui_zed_util/: Cargo.toml
crates/gpui_zed_util/src/: paths.rs  rel_path.rs  shell.rs  shell_env.rs  util.rs
crates/gpui_zed_util/src/command/: darwin.rs
crates/http_client/: Cargo.toml
crates/http_client/src/: github_download.rs
docs/: components.typ  custom_draw.md  index.typ  sidebar.typ  site-nav.yaml  template.typ
docs/media/: sidebar.css
docs/pages/: hot-patching.typ  index.typ
examples/: examples.toml  karaoke_app.rs  karaoke_text.rs  prelude.rs  text_gradients.rs
examples/_template/: base.rs
examples/bench/: custom_draw_stress.rs
examples/learn/: animation.rs  async_tasks.rs  blur_showcase.rs  creating_components.rs  custom_draw_api.rs  custom_draw_api_animated.rs  custom_draw_api_binding_arrays.rs  custom_draw_api_compressed_texture.rs  custom_draw_api_compute.rs  custom_draw_api_conformance.rs  custom_draw_api_cubemap.rs  custom_draw_api_gpu_profiling.rs  custom_draw_api_instanced.rs  custom_draw_api_metallib.rs  custom_draw_api_missing_binding.rs  custom_draw_api_mixed.rs  custom_draw_api_multi_group.rs  custom_draw_api_offscreen.rs  custom_draw_api_storage_texture.rs  custom_draw_api_streaming_texture.rs  custom_draw_api_texture_arrays.rs  custom_drawing.rs  interactive_elements.rs  layout.rs  overflow_fade.rs  pinch_zoom.rs  styling.rs  text.rs  wgpu_surface_basic.rs  wgpu_surface_stress.rs  window_background_showcase.rs
examples/legacy/: animation.rs  gradient.rs  inspector.rs  squircle.rs  text.rs  uniform_list.rs
examples/legacy/_template/: base.rs
script/: clippy
scripts/sync-upstream/: README.md  config.sh  fix-build.prompt.md  resolve-conflicts.prompt.md  state.json  sync-upstream.sh  sync_upstream.py
src/: _ownership_and_data_flow.rs  app.rs  assets.rs  bounds_tree.rs  color.rs  custom_draw.rs  default_colors.rs  dev_tools.rs  element.rs  gpui.rs  inspector.rs  interactive.rs  key_dispatch.rs  local_util.rs  platform.rs  queue.rs  scene.rs  style.rs  styled.rs  subscription.rs  svg_renderer.rs  taffy.rs  text_system.rs  window.rs
src/app/: async_context.rs  context.rs  entity_map.rs  test_app.rs  test_context.rs
src/elements/: anchored.rs  div.rs  gpu_canvas.rs  img.rs  list.rs  mod.rs  surface.rs  uniform_list.rs  wgpu_surface.rs
src/platform/: app_menu.rs  blade.rs  mac.rs  wgpu.rs
src/platform/blade/: blade_renderer.rs  custom_draw.rs  shaders.wgsl
src/platform/cross/: platform.rs  render_context.rs  renderer.rs  resize_detector.rs  text_system.rs  window.rs
src/platform/cross/shaders/: backdrop_blur.wgsl  (+2 more)
src/platform/linux/: platform.rs
src/platform/mac/: custom_draw.rs  events.rs  metal_atlas.rs  metal_renderer.rs  shaders.metal  window.rs
src/platform/test/: window.rs
src/platform/wgpu/: cosmic_text_system.rs  wgpu_atlas.rs  wgpu_renderer.rs
src/platform/windows/: clipboard.rs  direct_write.rs  directx_renderer.rs  dispatcher.rs  display.rs  events.rs  keyboard.rs  platform.rs  shaders.hlsl  util.rs  window.rs
src/text_system/: line.rs  line_layout.rs  line_wrapper.rs
tooling/macros/: Cargo.toml
tooling/macros/tests/: derive_context.rs  derive_inspector_reflection.rs  render_test.rs
tooling/perf/: Cargo.toml
tooling/perf/src/: main.rs
tooling/sync/: sync-upstream.sh
(+25 files in other folders)
