[workspace]
members = [
  "./crates/gpui/",
  "./crates/gpui_web/",
  "./crates/gpui_wgpu/",
  "./crates/gpui_linux/",
  "./crates/gpui_macos/",
  "./crates/gpui_tokio/",
  "./crates/gpui_macros/",
  "./crates/gpui_windows/",
  "./crates/gpui_platform/",
  "./crates/gpui_shared_string/",
  "./crates/gpui_elements/",
  "./tooling/perf/",
]
default-members = ["./crates/gpui/"]
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["Nathan Sobo <nathan@zed.dev>"]
description = "A community fork of Zed's GPU-accelerated UI framework"
publish = true
license = "Apache-2.0"
homepage = "https://gpui-ce.github.io/"
readme = "README.md"

[workspace.dependencies]
accesskit = "0.24.0"
accesskit_macos = "0.26.0"
accesskit_unix = "0.21.0"
accesskit_windows = "0.32.1"
anyhow = "1.0.86"
backtrace = "0.3"
bitflags = "2.6.0"
# was: git = "https://github.com/zed-industries/zed", rev = "876ec5a8a0...", version = "0.1.0"
collections = { package = "collections-gpui-unofficial", version = "1.7.2" }
ctor = "1.0.6"
derive_more = { version = "2.1.1", features = [
  "add",
  "add_assign",
  "deref",
  "deref_mut",
  "display",
  "from_str",
  "mul",
  "mul_assign",
  "not",
] }
futures = "0.3.32"
futures-concurrency = "7.7.1"
http = "1.3"
image = "0.25.1"
inventory = "0.3.19"
itertools = "0.14.0"
log = { version = "0.4.16", features = ["kv_unstable_serde", "serde"] }
parking_lot = "0.12.1"
postage = { version = "0.5", features = ["futures-traits"] }
# proptest-rs/proptest#635 ("proptest_path" in attr macro, what this rev exists for)
# merged 2026-04-23, but proptest 1.11.0 shipped 2026-03-24, not in any release yet.
# Already gated behind gpui's test-support/bench features, so this does not block a default `cargo publish`.
proptest = { git = "https://github.com/proptest-rs/proptest", rev = "3dca198a8fef1b32e3a66f1e1897c955b4dc5b5b", features = [
  "attr-macro",
] }
chrono = { version = "0.4", features = ["serde"] }
profiling = "1"
rand = "0.9.4"
regex = "1.5"
# was: git = "https://github.com/zed-industries/zed", rev = "876ec5a8a0..."
refineable = { package = "refineable-gpui-unofficial", version = "1.7.2" }
# was: git = "https://github.com/zed-industries/zed", rev = "876ec5a8a0..."
scheduler = { package = "scheduler-gpui-unofficial", version = "1.7.2" }
# was: git = "https://github.com/zed-industries/zed", rev = "876ec5a8a0..."
util_macros = { package = "util-macros-gpui-unofficial", version = "1.7.2" }
schemars = { version = "1.0", features = ["indexmap2"] }
serde = { version = "1.0.221", features = ["derive", "rc"] }
serde_json = { version = "1.0.144", features = ["preserve_order", "raw_value"] }
slotmap = "1.0.6"
smallvec = { version = "1.6", features = ["union", "const_new"] }
async-channel = "2.5.0"
stacksafe = "1.0"
strum = { version = "0.27.2", features = ["derive"] }
# was: git = "https://github.com/zed-industries/zed", rev = "876ec5a8a0..."
sum_tree = { package = "sum-tree-gpui-unofficial", version = "1.7.2" }
thiserror = "2.0.12"
hdrhistogram = "7"
pollster = "0.4.0"
url = "2.2"
uuid = { version = "1.1.2", features = ["v4", "v5", "v7", "serde"] }
web-time = "1.1.0"
cocoa = "=0.26.0"
cocoa-foundation = "=0.2.0"
core-foundation = "=0.10.0"
core-foundation-sys = "0.8.6"
core-video = { version = "0.5.2", features = ["metal"] }
# was: git = "https://github.com/zed-industries/zed", rev = "876ec5a8a0..."
media = { package = "media-gpui-unofficial", version = "1.7.2" }
objc = "0.2"
mach2 = "0.5"
metal = "0.33"
# has published zed variant version
scap = { git = "https://github.com/zed-industries/scap", rev = "4afea48c3b002197176fb19cd0f9b180dd36eaac", default-features = false, package = "zed-scap", version = "0.0.8-zed" }
env_logger = "0.11"
unicode-segmentation = "1.10"

wasm-bindgen = "0.2.120"
heck = "0.5"
proc-macro2 = "1.0.93"
syn = { version = "2.0.101", features = ["full", "extra-traits", "visit-mut"] }
quote = "1.0.9"
ashpd = { version = "0.13", default-features = false, features = [
  "async-io",
  "notification",
  "open_uri",
  "file_chooser",
  "settings",
  "trash",
] }
libc = "0.2"
smol = "2.0"
# `util` removed: fully absorbed into `gpui_util` upstream (confirmed against live gpui/Cargo.toml,
# Zed's own fork of gfx-rs/wgpu, no published equivalent under any name yet (zed-wgpu or otherwise). Compilation with v29.0.3 works
# Check for open Zed PRs against gfx-rs/wgpu
# to confirm no critical changes exist
wgpu = { git = "https://github.com/zed-industries/wgpu.git", rev = "357a0c56e0070480ad9daea5d2eaa83150b79e88", version = "29.0.3" }
criterion = { version = "0.5", features = ["html_reports"] }
objc2-app-kit = { version = "0.3", default-features = false, features = [
  "NSGraphics",
] }
semver = { version = "1.0", features = ["serde"] }
windows-core = "0.61"
tokio = { version = "1" }
# was: git = "https://github.com/zed-industries/zed", rev = "876ec5a8a0..."
gpui_util = { package = "gpui-util-gpui-unofficial", version = "1.7.2" }

gpui = { path = "./crates/gpui/" }
gpui_platform = { path = "./crates/gpui_platform/" }
gpui_linux = { path = "./crates/gpui_linux/" }
gpui_macos = { path = "./crates/gpui_macos/" }
gpui_windows = { path = "./crates/gpui_windows/" }
gpui_web = { path = "./crates/gpui_web/" }

gpui_wgpu = { path = "./crates/gpui_wgpu/" }

gpui_macros = { path = "./crates/gpui_macros/" }
gpui_shared_string = { path = "./crates/gpui_shared_string/" }
gpui_tokio = { path = "./crates/gpui_tokio/" }

[workspace.dependencies.windows]
version = "0.61"
features = [
  "Foundation_Numerics",
  "Globalization_DateTimeFormatting",
  "Storage_Search",
  "Storage_Streams",
  "System_Threading",
  "UI_ViewManagement",
  "Wdk_System_SystemServices",
  "Win32_Foundation",
  "Win32_Globalization",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Direct3D11",
  "Win32_Graphics_Direct3D_Fxc",
  "Win32_Graphics_DirectComposition",
  "Win32_Graphics_DirectWrite",
  "Win32_Graphics_DirectManipulation",
  "Win32_Graphics_Dwm",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dxgi_Common",
  "Win32_Graphics_Gdi",
  "Win32_Graphics_Imaging",
  "Win32_Graphics_Hlsl",
  "Win32_Networking_WinSock",
  "Win32_Security",
  "Win32_Security_Credentials",
  "Win32_Security_Cryptography",
  "Win32_Storage_FileSystem",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Console",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_DataExchange",
  "Win32_System_IO",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_Ole",
  "Win32_System_Performance",
  "Win32_System_Pipes",
  "Win32_System_RestartManager",
  "Win32_System_SystemInformation",
  "Win32_System_SystemServices",
  "Win32_System_Threading",
  "Win32_System_Variant",
  "Win32_System_WinRT",
  "Win32_UI_Controls",
  "Win32_UI_HiDpi",
  "Win32_UI_Input_Ime",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Input_Pointer",
  "Win32_UI_Shell",
  "Win32_UI_Shell_Common",
  "Win32_UI_Shell_PropertiesSystem",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Media",
]

[workspace.lints.rust]
unexpected_cfgs = { level = "allow" }

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
declare_interior_mutable_const = "deny"
redundant_clone = "deny"
disallowed_methods = "deny"
style = { level = "allow", priority = -1 }
type_complexity = "allow"
let_underscore_future = "allow"
single_range_in_vec_init = "allow"
too_many_arguments = "allow"
large_enum_variant = "allow"
nonminimal_bool = "allow"
